# experiment

./: LICENSE  README.md
c/: array.hpp  concepts.hh  functional.hpp  matrix.hpp  matrix_impl.hpp  meta.hpp  type_traits.hpp  util.cpp  util.h
cmu/: Makefile  datatype.h  interfaces.c  interfaces.h  main.c  typedef.h
cmu/priv/: adapt.c  adapt.h  async.c  async.h  buckboost.c  buckboost.h  eeprom.c  eeprom.h  ina2xx.c  ina2xx.h  pca9xxx.c  pca9xxx.h  priv_datatype.h
cpp学习/: C和C++语言中关键字const的不同差异.md  const vs. constexpr.md  使用array替代普通数组.md  使用基于范围的for循环.md  关于数组.md
leetcode/: shortest_job_first.hpp
lua/: external.lua  result.lua  result.md  test_external.lua  utility.lua
projects/libutils/: CMakeLists.txt
projects/libutils/include/: allocator.h  event.h  refcount.h
projects/libutils/src/: allocator.c  event.c  refcount.c
projects/libutils/test/: CMakeLists.txt  test_event.cpp  test_main.cpp  test_refcount.cpp
